--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,31 @@
-.card-wrapper {
+.cards-wrapper {
   max-width: 900;
-  margin: 40px auto;
+  margin: 80px auto 20px;
+}
+
+.detail-wrapper {
+  max-width: 600px;
+  margin: 80px auto 20px;
+  background-color: white;
+}
+
+.detail-wrapper img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+
 }
 
 .ant-card-cover > * {
   height: 200px;
   object-fit: cover;
-  
+}
+
+.restaurant-detail-wrapper {
+  padding: 30px;
+
+}
+.submit-rating {
+  display: flex;
+  flex-direction: column;
 }
